--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_phone_verification">
+    package="com.example.chat_app">
    <application
-        android:label="flutter_phone_verification"
+        android:label="chat_app"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
