--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: chat_app
+name: flutter_phone_verification
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,17 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  firebase_analytics: ^7.0.1
+  cloud_firestore: ^0.16.0
+  image_cropper: 1.0.2
+  image_picker: 0.6.0+17
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^1.1.4
-  firebase_core: ^1.1.1
-  cloud_firestore: ^2.1.0
-  google_sign_in: 4.4.3
-  random_string: ^2.0.1
-  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -52,8 +51,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
-     - assets/fonts/
+    - assets/
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
